# Minot-Project

./: .gitignore  Model.py  README.md  Streamlit.py  dockerfile  pyproject.toml  requirements.txt
.github/workflow/: ci-cd.yaml
.github/workflows/: ci-cd.yaml
Frontend/: index.html  script.js  style.css
k8s/: Deployment.yaml  Service.yaml
model/: Model.py  Prediction.py
